# dictionary

./: CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: build.yml
src/: CMakeLists.txt  Trie.cpp  Trie.h  TrieNode.cpp  TrieNode.h
test/: InMemory_dictionary_test.cpp  dictionary_test.cpp
